@@ -28,6 +28,7 @@
 */
 
 #include <config.h>
+#include <linux/string.h>
 #include <linux/types.h>
 #include <linux/ctype.h>
 #include <apex.h>
@@ -37,12 +38,30 @@
 #include <spinner.h>
 
 
+#if !defined (CONFIG_SMALL)
+# define USE_COPY_VERIFY	/* Define to include verify feature */
+#endif
+
 int cmd_copy (int argc, const char** argv)
 {
   struct descriptor_d din;
   struct descriptor_d dout;
+#if defined (USE_COPY_VERIFY)
+  struct descriptor_d din_v;
+  struct descriptor_d dout_v;
+  int verify = 0;
+#endif
+
   int result = 0;
   ssize_t cbCopy = 0;
+
+#if defined (USE_COPY_VERIFY)
+  if (argc > 1 && strcmp (argv[1], "-v") == 0) {
+    verify = 1;
+    --argc;
+    ++argv;
+  }
+#endif
 
   if (argc != 3)
     return ERROR_PARAM;
@@ -67,6 +86,14 @@ int cmd_copy (int argc, const char** argv)
   if (!dout.length)
     dout.length = DRIVER_LENGTH_MAX;
 
+#if defined (USE_COPY_VERIFY)
+  /* Create descriptors for rereading and verification */
+  /* *** FIXME: we ought to perform a dup () */
+  memcpy (&din_v, &din, sizeof (din));
+  memcpy (&dout_v, &dout, sizeof (dout));
+  dout_v.length = din_v.length;
+#endif
+
   {
     char rgb[1024];
     ssize_t cb;
@@ -85,12 +112,49 @@ int cmd_copy (int argc, const char** argv)
 	goto fail;
       }
 
+#if defined (USE_COPY_VERIFY)
+      if (verify) {
+	char rgbVerify[1024];
+	ssize_t cbVerify = din_v.driver->read (&din_v, rgbVerify, 
+					       sizeof (rgbVerify));
+	if (cbVerify != cb) {
+	  printf ("\rVerify failed: reread of input %d, expected %d, at"
+		  " 0x%x+0x%x\n", cbVerify, cb, cbCopy, 1024);
+	  return ERROR_FAILURE;
+	}
+	if (memcmp (rgb, rgbVerify, cb)) {
+	  printf ("\rVerify failed: reread input compare at 0x%x+0x%x\n",
+		  cbCopy, 1024);
+	  return ERROR_FAILURE;
+	}
+      }
+#endif
+
       SPINNER_STEP;
       cbWrote = dout.driver->write (&dout, rgb, cb);
       if (cbWrote != cb) {
 	result = ERROR_FAILURE;
 	goto fail;
       }
+
+#if defined (USE_COPY_VERIFY)
+      if (verify) {
+	char rgbVerify[1024];
+	ssize_t cbVerify = dout_v.driver->read (&dout_v, rgbVerify, 
+						sizeof (rgbVerify));
+	if (cbVerify != cb) {
+	  printf ("\rVerify failed: reread of output %d, expected %d, at"
+		  " 0x%x+0x%x\n", cbVerify, cb, cbCopy, 1024);
+	  return ERROR_FAILURE;
+	}
+	if (memcmp (rgb, rgbVerify, cb)) {
+	  printf ("\rVerify failed: reread output compare at 0x%x+0x%x\n",
+		  cbCopy, 1024);
+	  return ERROR_FAILURE;
+	}
+      }
+#endif
+
       report = cbCopy>>step;
       if (step && report != report_last) {
 	printf ("\r   %d KiB\r", cbCopy/1024);
@@ -114,8 +178,16 @@ static __command struct command_d c_copy = {
   .description = "copy data between devices",
   .func = cmd_copy,
   COMMAND_HELP(
-"copy SRC DST\n"
+"copy"
+#if defined (USE_COPY_VERIFY)
+" [-v]"
+#endif
+" SRC DST\n"
 "  Copy data from SRC region to DST region.\n"
+#if defined (USE_COPY_VERIFY)
+"  Adding the -v performs redundant reads of the data to verify that\n"
+"  what is read from SRC is correctly written to DST\n"
+#endif
 "  The length of the DST region is ignored.\n\n"
 "  e.g.  copy mem:0x20200000+0x4500 nor:0\n"
   )
