@@ -66,6 +66,6 @@ CONFIG_DRIVER_NOR=y
 CONFIG_ENV_REGION_KERNEL=nor:0x60010+0xffff0
 # Ramdisk length should match cmdline
 CONFIG_ENV_REGION_RAMDISK=nor:0x160010+0x69fff0
-CONFIG_ENV_REGION=nor:128k+64k
+CONFIG_ENV_REGION=nor:112k+16k
 
 #CONFIG_INTERRUPTS=y
